<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:background="@drawable/button_selector"
                android:id="@+id/btn0"
                android:text="@string/general"
                android:padding="@dimen/padding_8dp"
                android:textSize="@dimen/textSize_12sp"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:background="@drawable/button_selector"
                android:id="@+id/btn1"
                android:text="@string/business"
                android:padding="@dimen/padding_8dp"
                android:textSize="@dimen/textSize_12sp"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:background="@drawable/button_selector"
                android:id="@+id/btn2"
                android:text="@string/science"
                android:padding="@dimen/padding_8dp"
                android:textSize="@dimen/textSize_12sp"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:background="@drawable/button_selector"
                android:id="@+id/btn3"
                android:text="@string/sports"
                android:padding="@dimen/padding_8dp"
                android:textSize="@dimen/textSize_12sp"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:background="@drawable/button_selector"
                android:id="@+id/btn4"
                android:text="@string/technology"
                android:padding="@dimen/padding_8dp"
                android:textSize="@dimen/textSize_12sp"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:background="@drawable/button_selector"
                android:id="@+id/btn5"
                android:text="@string/health"
                android:padding="@dimen/padding_8dp"
                android:textSize="@dimen/textSize_12sp"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
            <Button
                android:background="@drawable/button_selector"
                android:id="@+id/btn6"
                android:text="@string/entertainment"
                android:padding="@dimen/padding_8dp"
                android:textSize="@dimen/textSize_12sp"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>
        </LinearLayout>
    </HorizontalScrollView>
    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />



</LinearLayout>